--- a/html/servicesSection.html
+++ b/html/servicesSection.html
@@ -3,7 +3,8 @@
   .servicesSection{
       display: flex;
       flex-direction: column;
-      margin: 100px 0;
+      padding: 100px 0;
+      background-color: #f1f2f6;
   }
   .servicesSectionHeader{
       display: flex;
