added ids to sections for page navigation

--- a/html/about.html
+++ b/html/about.html
@@ -93,7 +93,7 @@
   }
   
 </style>
-<section class="aboutSection">
+<section class="aboutSection" id="about">
   <div class="aboutSectionHeader">
     <h1 class="sans-serif md-txt">ABOUT</h1>
     <p class="serif sm-txt">Lorem ipsum dolor sit amet, consectetur.</p>
