--- a/html/bannerSection.html
+++ b/html/bannerSection.html
@@ -20,9 +20,12 @@
   .bannerSection h2, .bannerSection h1, .bannerSection button {
       margin: 15px 0;
   }
+  .bannerSection a{
+      text-decoration: none;
+  }
 </style>
 <section class="bannerSection">
   <h2 class="md-txt serif">Welcome to our workplace!</h2>
   <h1 class="l-txt sans-serif">WE WOULD LIKE TO MEET YOU</h1>
-  <button class="btn sm-txt">TELL ME MORE</button>
+  <button class="btn sm-txt"> <a href="#services">TELL ME MORE</a></button>
 </section>
