--- a/html/contactUsSection.html
+++ b/html/contactUsSection.html
@@ -51,7 +51,7 @@
   }
   
 </style>
-<section class="contactUsSection">
+<section class="contactUsSection" id="contact">
   <div class="contactUsSectionHeader">
     <h1 class="md-txt sans-serif">CONTACT US</h1>
     <p class="sm-txt serif">Lorem ipsum dolor sit amet consectetur.</p>
