--- a/html/header.html
+++ b/html/header.html
@@ -83,7 +83,7 @@
   <ul class="pageSections sans-serif">
     <li> <a href="#services">SERVICES</a></li>
     <li> <a href="#portfolio">PORTFOLIO</a></li>
-    <li><a href="#services">ABOUT</a></li>
+    <li><a href="#about">ABOUT</a></li>
     <li> <a href="#team">TEAM</a></li>
     <li> <a href="#contact">CONTACT</a></li>
   </ul>
