--- a/html/portfolioSection.html
+++ b/html/portfolioSection.html
@@ -182,7 +182,7 @@
   }
   
 </style>
-<section class="portfolioSection">
+<section class="portfolioSection" id="portfolio">
   <div class="portfolioSectionHeader">
     <h2 class="md-txt sans-serif">PORTFOLIO</h2>
     <p class="sm-txt serif">Lorem ipsum dolor sit amet, consectetur.</p>
