--- a/html/servicesSection.html
+++ b/html/servicesSection.html
@@ -33,7 +33,7 @@
   }
   
 </style>
-<section class="servicesSection">
+<section class="servicesSection" id="services">
   <div class="servicesSectionHeader">
     <h2 class="md-txt sans-serif">SERVICES</h2>
     <p class="sm-txt serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
