--- a/html/team.html
+++ b/html/team.html
@@ -63,7 +63,7 @@
       text-align: center;
   } 
 </style>
-<section class="teamSection">
+<section class="teamSection" id="team">
   <div class="teamSectionHeader">
     <h1 class="md-txt sans-serif">OUR AMAZING TEAM</h1>
     <p class="sm-txt serif">Lorem ipsum dolor sit amet consectetur.</p>
