finished smooth menu jumps to sections of page

--- a/html/header.html
+++ b/html/header.html
@@ -75,16 +75,45 @@
       headerEl.style = headerStyle;
       pageSectionsEl.style = pageSectionsStyle;
   }
+  
+  function scrollTo(element, to, duration){
+      if (duration <= 0) return;
+      var difference = to - element.scrollTop;
+      var perTick = difference / duration * 10;
+  
+      setTimeout(function() {
+          element.scrollTop = element.scrollTop + perTick;
+          if (element.scrollTop === to) return;
+          scrollTo(element, to, duration - 10);
+      }, 10);
+  }
+  
+  window.addEventListener('DOMContentLoaded', function () {
+      let anchorTagEls = document.getElementsByClassName('sectionLink');
+      for(let i = 0;i < anchorTagEls.length;i++ ){
+          anchorTagEls[i].onclick = animateScroll;
+      }
+  });
+  
+  function animateScroll(e) {
+      e.preventDefault(); // prevent jumping to section, animate instead       
+      let section = e.target.getAttribute("href");
+      // get top position of section Elements in relation to top of page
+      var sectionEl = document.getElementById(section.slice(1));
+      let jmp = sectionEl.offsetTop;
+      let htmlEl = document.getElementsByTagName('html')[0];
+      setTimeout(()=> scrollTo(htmlEl, jmp, 600), 200);
+  }
 </script>
 <header id="header">
   <div class="headerTopRow"><a class="sm-txt cursive" href="#header">Modern Landing Page</a>
     <button class="btn" onclick="handleMenuBtnClicked(this)">MENU<i class="fas fa-bars"></i></button>
   </div>
   <ul class="pageSections sans-serif">
-    <li> <a href="#services">SERVICES</a></li>
-    <li> <a href="#portfolio">PORTFOLIO</a></li>
-    <li><a href="#about">ABOUT</a></li>
-    <li> <a href="#team">TEAM</a></li>
-    <li> <a href="#contact">CONTACT</a></li>
+    <li> <a class="sectionLink" href="#services">SERVICES</a></li>
+    <li> <a class="sectionLink" href="#portfolio">PORTFOLIO</a></li>
+    <li><a class="sectionLink" href="#about">ABOUT</a></li>
+    <li> <a class="sectionLink" href="#team">TEAM</a></li>
+    <li> <a class="sectionLink" href="#contact">CONTACT</a></li>
   </ul>
 </header>
