fixed the navbar to top of viewport

--- a/html/bannerSection.html
+++ b/html/bannerSection.html
@@ -27,5 +27,5 @@
 <section class="bannerSection">
   <h2 class="md-txt serif">Welcome to our workplace!</h2>
   <h1 class="l-txt sans-serif">WE WOULD LIKE TO MEET YOU</h1>
-  <button class="btn sm-txt"> <a href="#services">TELL ME MORE</a></button>
+  <button class="btn sm-txt"> <a class="sectionLink" href="#services">TELL ME MORE</a></button>
 </section>
