--- a/html/bannerSection.html
+++ b/html/bannerSection.html
@@ -23,6 +23,13 @@
   .bannerSection a{
       text-decoration: none;
   }
+  /* media query styles */
+  @media (min-width: 669px) and (max-width: 991px) {
+      .bannerSection h1{
+          padding: 0 50px;
+          text-align: center;
+      }
+  }
 </style>
 <section class="bannerSection">
   <h2 class="md-txt serif">Welcome to our workplace!</h2>
