--- a/html/index.html
+++ b/html/index.html
@@ -68,9 +68,16 @@
           cursor: pointer;
       }
       //- Media Queries
-      @media only screen and (max-width: 668px) { //- iPhone 6/7/8
+      @media only screen and (max-width: 668px) { 
           header{
               height: 56px;
+          }
+      }
+      @media (min-width: 669px) and (max-width: 991px) {
+          #header button{
+              padding: 4px;
+              box-sizing: border-box;
+              height: auto;
           }
       }
       
@@ -133,14 +140,14 @@
     </script>
     <header id="header">
       <div class="headerTopRow"><a class="sm-txt cursive" href="#header">Modern Landing Page</a>
-        <button class="btn" onclick="handleMenuBtnClicked(this)">MENU<i class="fas fa-bars"></i></button>
+        <button class="btn xs-txt" onclick="handleMenuBtnClicked(this)">MENU<i class="fas fa-bars"></i></button>
       </div>
       <ul class="pageSections sans-serif">
-        <li> <a class="sectionLink" href="#services">SERVICES</a></li>
-        <li> <a class="sectionLink" href="#portfolio">PORTFOLIO</a></li>
-        <li><a class="sectionLink" href="#about">ABOUT</a></li>
-        <li> <a class="sectionLink" href="#team">TEAM</a></li>
-        <li> <a class="sectionLink" href="#contact">CONTACT</a></li>
+        <li> <a class="sm-txt sectionLink" href="#services">SERVICES</a></li>
+        <li> <a class="sm-txt sectionLink" href="#portfolio">PORTFOLIO</a></li>
+        <li><a class="sm-txt sectionLink" href="#about">ABOUT</a></li>
+        <li> <a class="sm-txt sectionLink" href="#team">TEAM</a></li>
+        <li> <a class="sm-txt sectionLink" href="#contact">CONTACT</a></li>
       </ul>
     </header>
     <style>
@@ -166,6 +173,13 @@
       }
       .bannerSection a{
           text-decoration: none;
+      }
+      /* media query styles */
+      @media (min-width: 669px) and (max-width: 991px) {
+          .bannerSection h1{
+              padding: 0 50px;
+              text-align: center;
+          }
       }
     </style>
     <section class="bannerSection">
