--- a/html/contactUsSection.html
+++ b/html/contactUsSection.html
@@ -49,6 +49,11 @@
   .contactUsSection form button {
       padding 30px;
   }
+  @media (min-width: 0px) and (max-width: 668px) {
+      .contactUsSection textarea {
+          width: 150px;
+      }
+  }
   
 </style>
 <section class="contactUsSection" id="contact">
