--- a/html/portfolioSection.html
+++ b/html/portfolioSection.html
@@ -132,7 +132,7 @@
       width: 100vw;
       overflow-x: hidden;
       overflow-y: scroll;
-      z-index: 2;
+      z-index: 4;
       box-sizing: border-box;
       display: none;
       background-color:   rgba(0, 0, 0, 0.5);
@@ -179,6 +179,19 @@
   .portfolioCategoriesContainer {
       display: flex;
       flex-wrap: wrap;
+  }
+  @media (min-width: 0px) and (max-width: 668px) {
+      .portfolioCategory img{
+          width: 300px;
+          height: 300px;
+      }
+      .portfolioCategoriesContainer{
+          flex-direction: column;
+      }
+      .portfolioCategory i {
+          width: 300px;
+          height: 300px; 
+      }
   }
   
 </style>
