--- a/html/team.html
+++ b/html/team.html
@@ -62,6 +62,12 @@
   .teamSectionFooter {
       text-align: center;
   } 
+  @media (min-width: 0px) and (max-width: 668px) {
+      .teamSection .team {
+          display: flex;
+          flex-direction: column;
+      }
+  }
 </style>
 <section class="teamSection" id="team">
   <div class="teamSectionHeader">
