finished responsive design for phones

--- a/html/footer.html
+++ b/html/footer.html
@@ -43,6 +43,13 @@
   .footer .companyRulesContainer p:hover{
       text-decoration: underline;
   }
+  
+  @media (min-width: 0px) and (max-width: 668px) {
+      .footer {
+          flex-direction: column;
+          align-items: center;
+      }
+  }
 </style>
 <section class="footer">
   <div class="copyrightContainer">
