--- a/html/about.html
+++ b/html/about.html
@@ -71,7 +71,6 @@
       text-align: left;
   }
   .timelineContainer .timePeriod:last-child {
-      background-color: red;
       margin-bottom: 30px;
   }
   .endOfTimeline {
@@ -90,6 +89,44 @@
       align-self: center;
       margin-left: calc(50% - 59px);
       background-color: #ffa801;
+  }
+  @media (min-width: 0px) and (max-width: 668px) {
+      .timelineContainer:before{
+          left: 0;
+          margin-left: calc(10px + 4px + 40px);
+      }
+      .timelineContainer .timePeriod:nth-child(even) {
+          flex-direction: row-reverse;
+          width: 100%;
+          margin-left: 0;
+      }
+      .timelineContainer .timePeriod {
+          flex-direction: row-reverse;
+          width: 100%;
+          margin-left: 0;
+      }
+      .timelineContainer .timePeriod .txtContainer p{
+          text-align: left;
+      }
+      .timelineContainer .timePeriod .txtContainer {
+          align-items: flex-start;
+      }
+  
+      .timelineContainer .timelineInfo {
+          margin: 0 13px;
+      }
+      .timelineContainer img {
+          width: 80px;
+          height: 80px;
+          margin-left: 10px;
+      }
+      .endOfTimeline{
+          width: 80px;
+          height: 80px;
+          align-self: flex-start;
+          margin-left: calc(10px + 4px);
+      }
+  
   }
   
 </style>
@@ -135,6 +172,6 @@
         </div>
       </div><img src="../assets/mountains.jpg" alt="Mountains"/>
     </div>
-    <div class="endOfTimeline sans-serif">Be Part Of Our Story!</div>
+    <div class="xs-txt endOfTimeline sans-serif">Be Part Of Our Story!</div>
   </div>
 </section>
