--- a/html/about.html
+++ b/html/about.html
@@ -128,6 +128,11 @@
       }
   
   }
+  @media (min-width: 992px) {
+      .timelineContainer{
+          width: 70vw;
+      }
+  }
   
 </style>
 <section class="aboutSection" id="about">
