--- a/html/portfolioSection.html
+++ b/html/portfolioSection.html
@@ -193,6 +193,20 @@
           height: 300px; 
       }
   }
+  @media (min-width: 992px) {
+      .portfolioCategory img {
+          width: 25vw;
+          height: 25vw;
+      }
+  
+      .projectDialogContainer .dialogBody{
+          width:50vw;
+      }
+  
+      .projectDialogContainer .dialogBody img{
+          align-self: center;
+      }
+  }
   
 </style>
 <section class="portfolioSection" id="portfolio">
