--- a/html/team.html
+++ b/html/team.html
@@ -68,6 +68,14 @@
           flex-direction: column;
       }
   }
+  @media (min-width: 992px) {
+      .employee{
+          margin: 0 50px;
+      }
+      .teamSectionFooter {
+          width: 60vw;
+      }
+  }
 </style>
 <section class="teamSection" id="team">
   <div class="teamSectionHeader">
